@@ -1,6 +1,12 @@
 Sun Aug 31 22:53:12 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>
 
 	* gnubg.c conditionals around StartPythonHandleX/StopPythonHandleX
+	  for all  environments, as it appears to be for a later python
+	  version 
+
+Sun Aug 31 22:53:12 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>
+
+	* gnubg.c conditionals around StartPythonHandleX/StopPythonHandleX
 	  for non GUI environments
 	* play.c remove dead variable
 
